Fixed resume overlaping banner2

--- a/index.css
+++ b/index.css
@@ -1106,6 +1106,10 @@ svg circle:nth-child(2) {
     filter: grayscale(0);
     transform: scale(1);
   }
+
+  .banner2 {
+    margin-top: 400px;
+  }  
 }
 
 
@@ -1251,6 +1255,10 @@ svg circle:nth-child(2) {
   .projects .itemBox img {
     opacity: 0.2;
     transform: scale(1);
+  }
+
+  .banner2 {
+    margin-top: 700px;
   }
 }
 
